--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
     - run: yarn ci
-    - run: yarn 
+    - run: yarn build
     - uses: actions/checkout@v2
       with: 
         ref: build
@@ -31,5 +31,6 @@ jobs:
       run: |
         git config --global user.name 'Cody Duong'
         git config --global user.email 'codyduong@users.noreply.github.com'
+        git add .
         git commit -am "Automated Build"
         git push
