--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -23,14 +23,12 @@ jobs:
         cache: 'yarn'
     - run: yarn ci
     - run: yarn build
-    - uses: actions/checkout@v2
-      with: 
-        ref: build
-        token: ${{ secrets.PAT }}
     - name: Commit build
       run: |
         git config --global user.name 'Cody Duong'
         git config --global user.email 'codyduong@users.noreply.github.com'
+        git fetch --all
+        git checkout -b "build" "origin/build"
         git add .
         git commit -am "Automated Build"
         git push
