--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -28,7 +28,9 @@ jobs:
         git config --global user.name 'Cody Duong'
         git config --global user.email 'codyduong@users.noreply.github.com'
         git fetch --all
-        git checkout -b "build" "origin/build"
         git add .
+        git stash
+        git checkout -b "build" "origin/build"
+        git stash pop 
         git commit -am "Automated Build"
         git push
